--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -24,11 +24,11 @@ jobs:
     needs: build
     
     steps:
-      - name: Download Text File
+      - name: Download text file
         uses: actions/download-artifact@v4
         with:
           name: hello-artifact
           path: ./artifacts
 
-      - name: Display Text
+      - name: Display content of the text file
         run: cat ./artifacts/hello.txt
